@@ -148,10 +148,9 @@ long RPC2_Init(char *VId,		/* magic version string */
 		      LWP_NORMAL_PRIORITY, NULL,
 		      c, &rpc2_SocketListenerPID);
 
-#ifdef RPC2DEBUG
     c = "ClockTick";
-    LWP_CreateProcess((PFIC)rpc2_ClockTick, 16384, LWP_NORMAL_PRIORITY, NULL, c, (PROCESS *)&ctpid);
-#endif RPC2DEBUG 
+    LWP_CreateProcess((PFIC)rpc2_ClockTick, 16384, LWP_NORMAL_PRIORITY, NULL,
+		      c, (PROCESS *)&ctpid);
 
     if (rc != RPC2_SUCCESS)
 	say(-1, RPC2_DebugLevel, "RPC2_Init(): Exiting with error\n");
